--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@400;600&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
+    <audio id="bg-music" loop>
+    <source src="muzik.mp3" type="audio/mpeg">
+</audio>
+
+<button id="music-control" class="music-btn" onclick="toggleMusic()">🔇</button>
     <div class="bg-animation"></div>
 
     <div class="container glass-effect">
